--- a/package.json
+++ b/package.json
@@ -18,23 +18,23 @@
     "typings": "typings"
   },
   "dependencies": {
-    "@angular/common": "2.0.0-rc.6",
-    "@angular/compiler": "2.0.0-rc.6",
-    "@angular/core": "2.0.0-rc.6",
-    "@angular/forms": "2.0.0-rc.6",
-    "@angular/platform-browser":  "2.0.0-rc.6",
-    "@angular/platform-browser-dynamic":  "2.0.0-rc.6",
+    "@angular/common": "2.0.0",
+    "@angular/compiler": "2.0.0",
+    "@angular/core": "2.0.0",
+    "@angular/forms": "2.0.0",
+    "@angular/platform-browser":  "2.0.0",
+    "@angular/platform-browser-dynamic":  "2.0.0",
     
     "core-js": "^2.4.1",
     "systemjs": "0.19.27",
-    "reflect-metadata": "^0.1.3",
-    "rxjs": "5.0.0-beta.11",
-    "zone.js": "^0.6.17"
+    "reflect-metadata": "^0.1.8",
+    "rxjs": "5.0.0-beta.12",
+    "zone.js": "^0.6.23"
   },
   "devDependencies": {
-    "concurrently": "^2.0.0",
+    "concurrently": "^2.2.0",
     "lite-server": "^2.2.2",
-    "typescript": "^1.8.10",
+    "typescript": "^2.0.2",
     "typings":"^1.3.2",
     "tslint":"^3.15.1"
   }
