--- a/package.json
+++ b/package.json
@@ -18,24 +18,24 @@
     "typings": "typings"
   },
   "dependencies": {
-    "@angular/common": "2.0.0",
-    "@angular/compiler": "2.0.0",
-    "@angular/core": "2.0.0",
-    "@angular/forms": "2.0.0",
-    "@angular/platform-browser":  "2.0.0",
-    "@angular/platform-browser-dynamic":  "2.0.0",
+    "@angular/common": "~2.0.1",
+    "@angular/compiler": "~2.0.1",
+    "@angular/core": "~2.0.1",
+    "@angular/forms": "~2.0.1",
+    "@angular/platform-browser":  "~2.0.1",
+    "@angular/platform-browser-dynamic":  "~2.0.1",
     
     "core-js": "^2.4.1",
-    "systemjs": "0.19.27",
+    "systemjs": "0.19.39",
     "reflect-metadata": "^0.1.8",
     "rxjs": "5.0.0-beta.12",
-    "zone.js": "^0.6.23"
+    "zone.js": "^0.6.25"
   },
   "devDependencies": {
     "concurrently": "^2.2.0",
     "lite-server": "^2.2.2",
-    "typescript": "^2.0.2",
-    "typings":"^1.3.2",
+    "typescript": "^2.0.3",
+    "typings":"^1.4.0",
     "tslint":"^3.15.1"
   }
 }
