--- a/package.json
+++ b/package.json
@@ -13,29 +13,27 @@
     "tsc": "tsc",
     "tsc:w": "tsc -w",
     "lint": "tslint -c tslint.json app/**/*.ts -t verbose || true",
-    "lite": "lite-server",
-    "postinstall": "typings install",
-    "typings": "typings"
+    "lite": "lite-server"
   },
   "dependencies": {
-    "@angular/common": "~2.1.0",
-    "@angular/compiler": "~2.1.0",
-    "@angular/core": "~2.1.0",
-    "@angular/forms": "~2.1.0",
-    "@angular/platform-browser": "~2.1.0",
-    "@angular/platform-browser-dynamic": "~2.1.0",
+    "@angular/common": "~2.4.0",
+    "@angular/compiler": "~2.4.0",
+    "@angular/core": "~2.4.0",
+    "@angular/forms": "~2.4.0",
+    "@angular/platform-browser": "~2.4.0",
+    "@angular/platform-browser-dynamic": "~2.4.0",
     
     "core-js": "^2.4.1",
-    "systemjs": "0.19.39",
+    "systemjs": "0.19.40",
     "reflect-metadata": "^0.1.8",
-    "rxjs": "5.0.0-beta.12",
-    "zone.js": "^0.6.25"
+    "rxjs": "5.0.1",
+    "zone.js": "^0.7.4"
   },
   "devDependencies": {
+    "@types/node": "^6.0.46",
     "concurrently": "^2.2.0",
     "lite-server": "^2.2.2",
-    "typescript": "^2.0.3",
-    "typings":"^1.4.0",
+    "typescript": "^2.0.10",
     "tslint":"^3.15.1"
   }
 }
