--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "@angular/forms": "~2.4.0",
     "@angular/platform-browser": "~2.4.0",
     "@angular/platform-browser-dynamic": "~2.4.0",
-    
     "core-js": "^2.4.1",
     "systemjs": "0.19.40",
     "reflect-metadata": "^0.1.8",
@@ -30,10 +29,10 @@
     "zone.js": "^0.7.4"
   },
   "devDependencies": {
-    "@types/node": "^6.0.46",
+    "@types/node": "^7.0.8",
     "concurrently": "^2.2.0",
     "lite-server": "^2.2.2",
-    "typescript": "^2.0.10",
-    "tslint":"^3.15.1"
+    "tslint": "^3.15.1",
+    "typescript": "^2.2.1"
   }
 }
