--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "angular2-dual-listbox",
-  "description": "Angular 2 component for a dual listbox control.",
-  "version": "2.4.0",
+  "name": "angular-dual-listbox",
+  "description": "Angular 2+ component for a dual listbox control.",
+  "version": "4.0.0",
   "repository": {
     "type": "git",
-    "url": "https://github.com/czeckd/angular2-dual-listbox.git"
+    "url": "https://github.com/czeckd/angular-dual-listbox.git"
   },
   "author": "David Czeck",
   "license": "MIT",
@@ -16,23 +16,24 @@
     "lite": "lite-server"
   },
   "dependencies": {
-    "@angular/common": "~2.4.0",
-    "@angular/compiler": "~2.4.0",
-    "@angular/core": "~2.4.0",
-    "@angular/forms": "~2.4.0",
-    "@angular/platform-browser": "~2.4.0",
-    "@angular/platform-browser-dynamic": "~2.4.0",
+    "@angular/common": "~4.0.0",
+    "@angular/compiler": "~4.0.0",
+    "@angular/core": "~4.0.0",
+    "@angular/forms": "~4.0.0",
+    "@angular/platform-browser": "~4.0.0",
+    "@angular/platform-browser-dynamic": "~4.0.0",
     "core-js": "^2.4.1",
-    "systemjs": "0.19.40",
-    "reflect-metadata": "^0.1.8",
-    "rxjs": "5.0.1",
-    "zone.js": "^0.7.4"
+    "systemjs": "0.19.47",
+    "rxjs": "^5.2.0",
+    "zone.js": "^0.8.4"
   },
   "devDependencies": {
-    "@types/node": "^7.0.8",
+    "@angular/compiler-cli": "^4.0.0",
+    "@types/core-js": "^0.9.39",
+    "@types/node": "^6.0.60",
     "concurrently": "^2.2.0",
     "lite-server": "^2.2.2",
-    "tslint": "^3.15.1",
-    "typescript": "^2.2.1"
+    "tslint": "~4.5.0",
+    "typescript": "~2.2.0"
   }
 }
