--- a/tsconfig-esm.json
+++ b/tsconfig-esm.json
@@ -1,14 +1,15 @@
 {
   "compilerOptions": {
     "target": "es5",
-    "module": "commonjs",
+    "module": "es2015",
     "moduleResolution": "node",
-    "outDir": "./runt",
+    "outDir": "./dist",
     "sourceMap": true,
     "declaration" : true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "removeComments": false,
+    "removeComments": true,
+    "stripInternal": true,
     "noImplicitAny": true,
     "suppressImplicitAnyIndexErrors": true,
     "typeRoots": [
@@ -19,8 +20,9 @@
       "dom"
     ]
   },
-  "include": [
-    "app/**/*",
-    "lib/**/*"
+  "files": [
+    "tmp/angular-dual-listbox.module.ts",
+    "tmp/dual-list.component.ts",
+    "tmp/index.ts"
   ]
 }
