--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "angular-dual-listbox",
   "description": "Angular 2+ component for a dual listbox control.",
-  "version": "4.0.0",
+  "version": "4.1.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/czeckd/angular-dual-listbox.git"
@@ -9,31 +9,40 @@
   "author": "David Czeck",
   "license": "MIT",
   "scripts": {
-    "start": "tsc && concurrently \"tsc -w\" \"lite-server\" ",
+    "start": "rimraf runt && npm run dist && tsc && concurrently \"tsc -w\" \"lite-server\" ",
     "tsc": "tsc",
     "tsc:w": "tsc -w",
+    "clean": "rimraf runt tmp dist",
+    "dist": "rimraf tmp dist && ts-node tools/inliner.ts && tsc -p tsconfig-esm.json && rollup -c rollup.config.js dist/index.js > dist/angular-dual-listbox.bundle.js && ngc -p tsconfig-esm.json && ts-node tools/packager.ts && cp README.md LICENSE dist",
     "lint": "tslint -c tslint.json app/**/*.ts -t verbose || true",
     "lite": "lite-server"
   },
-  "dependencies": {
-    "@angular/common": "~4.0.0",
-    "@angular/compiler": "~4.0.0",
-    "@angular/core": "~4.0.0",
-    "@angular/forms": "~4.0.0",
-    "@angular/platform-browser": "~4.0.0",
-    "@angular/platform-browser-dynamic": "~4.0.0",
-    "core-js": "^2.4.1",
-    "systemjs": "0.19.47",
-    "rxjs": "^5.2.0",
-    "zone.js": "^0.8.4"
+  "main": "angular-dual-listbox.bundle.js",
+  "module": "angular-dual-listbox.module.js",
+  "peerDependencies": {
+    "@angular/core": ">=4.0.0"
   },
   "devDependencies": {
+    "@angular/common": "^4.0.0",
+    "@angular/compiler": "^4.0.0",
     "@angular/compiler-cli": "^4.0.0",
+    "@angular/core": "^4.0.0",
+    "@angular/forms": "^4.0.0",
+    "@angular/platform-browser": "^4.0.0",
+    "@angular/platform-browser-dynamic": "^4.0.0",
     "@types/core-js": "^0.9.39",
     "@types/node": "^6.0.60",
+    "bootstrap": "^3.3.7",
     "concurrently": "^2.2.0",
+    "core-js": "^2.4.1",
     "lite-server": "^2.2.2",
+    "rimraf": "^2.6.1",
+    "rollup": "^0.41.6",
+    "rxjs": "^5.2.0",
+    "systemjs": "0.19.47",
+    "ts-node": "^3.0.2",
     "tslint": "~4.5.0",
-    "typescript": "~2.2.0"
+    "typescript": "~2.2.0",
+    "zone.js": "^0.8.4"
   }
 }
