--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "tsc:w": "tsc -w",
     "clean": "rimraf runt tmp dist",
     "dist": "tools/mkdist",
-    "lint": "tslint -c tslint.json app/**/*.ts -t verbose || true",
+    "lint": "tslint -c tslint.json -t verbose lib/**/*.ts app/**/*.ts || true",
     "lite": "lite-server"
   },
   "main": "angular-dual-listbox.bundle.js",
