Add angular genDIr opt

--- a/tsconfig-i18n.json
+++ b/tsconfig-i18n.json
@@ -11,5 +11,8 @@
     "lib/angular-dual-listbox.module.ts",
     "lib/basic-list.ts",
     "lib/dual-list.component.ts"
-  ]
+  ],
+  "angularCompilerOptions": {
+    "genDir": "locale"
+  }
 }
