--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "rimraf": "^2.6.1",
     "rollup": "^0.41.6",
     "rxjs": "^5.2.0",
+    "shelljs": "^0.7.7",
     "systemjs": "0.19.47",
     "ts-node": "^3.0.2",
     "tslint": "~4.5.0",
