--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "angular-dual-listbox",
   "description": "Angular 4+ component for a dual listbox control.",
-  "version": "4.5.0",
+  "version": "4.5.1",
   "repository": {
     "type": "git",
     "url": "https://github.com/czeckd/angular-dual-listbox.git"
@@ -12,10 +12,10 @@
   "author": "David Czeck",
   "license": "MIT",
   "scripts": {
-    "start": "rimraf runt && npm run dist && tsc && concurrently \"tsc -w\" \"lite-server\" ",
+    "start": "npm run clean && npm run dist && tsc && concurrently \"tsc -w\" \"lite-server\" ",
     "tsc": "tsc",
     "tsc:w": "tsc -w",
-    "clean": "rimraf runt tmp dist",
+    "clean": "rimraf runt dist",
     "dist": "tools/mkdist",
     "lint": "tslint -c tslint.json -t verbose lib/**/*.ts app/**/*.ts || true",
     "lite": "lite-server"
