--- a/tsconfig-esm.json
+++ b/tsconfig-esm.json
@@ -21,10 +21,10 @@
     ]
   },
   "files": [
-    "tmp/angular-dual-listbox.module.ts",
-    "tmp/basic-list.ts",
-    "tmp/dual-list.component.ts",
-    "tmp/index.ts"
+    "dist/angular-dual-listbox.module.ts",
+    "dist/basic-list.ts",
+    "dist/dual-list.component.ts",
+    "dist/index.ts"
   ],
   "angularCompilerOptions": {
     "skipTemplateCodegen": true
