--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "angular-dual-listbox",
   "description": "Angular 4+ component for a dual listbox control.",
-  "version": "4.5.1",
+  "version": "4.6.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/czeckd/angular-dual-listbox.git"
@@ -16,7 +16,7 @@
     "tsc": "tsc",
     "tsc:w": "tsc -w",
     "clean": "rimraf runt dist",
-    "dist": "tools/mkdist",
+    "dist": "ng-packagr -p lib/package.json && cp README.md LICENSE dist",
     "lint": "tslint -c tslint.json -t verbose lib/**/*.ts app/**/*.ts || true",
     "lite": "lite-server"
   },
@@ -40,11 +40,12 @@
     "@angular/platform-browser": "^4.4.4",
     "@angular/platform-browser-dynamic": "^4.4.4",
     "@types/core-js": "^0.9.43",
-    "@types/node": "^8.0.50",
+    "@types/node": "^9.4.0",
     "bootstrap": "^3.3.7",
     "concurrently": "^2.2.0",
     "core-js": "^2.5.1",
     "lite-server": "^2.3.0",
+    "ng-packagr": "^1.6.0",
     "rimraf": "^2.6.2",
     "rollup": "^0.51.1",
     "rxjs": "^5.2.0",
