--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "angular-dual-listbox",
   "description": "Angular 4+ component for a dual listbox control.",
-  "version": "4.6.3",
+  "version": "4.7.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/czeckd/angular-dual-listbox.git"
@@ -52,7 +52,7 @@
     "systemjs": "0.19.47",
     "ts-node": "^3.3.0",
     "tslint": "^5.8.0",
-    "typescript": "~2.4.2",
+    "typescript": "^2.6.2",
     "zone.js": "^0.8.18"
   }
 }
