--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,29 +1,30 @@
 {
+  "compileOnSave": false,
   "compilerOptions": {
-    "target": "es5",
-    "module": "commonjs",
-    "moduleResolution": "node",
-    "outDir": "./runt",
+    "baseUrl": "./",
+    "outDir": "./dist/out-tsc",
     "sourceMap": true,
-    "declaration" : true,
+    "declaration": false,
+    "module": "esnext",
+    "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "removeComments": false,
-    "noImplicitAny": true,
-    "suppressImplicitAnyIndexErrors": true,
+    "importHelpers": true,
+    "target": "es2015",
     "typeRoots": [
       "node_modules/@types"
     ],
-    "baseUrl": ".",
-    "paths": {
-      "angular-dual-listbox": [ "dist" ]
-    },
     "lib": [
-      "es2016",
+      "es2018",
       "dom"
-    ]
-  },
-  "include": [
-    "app/**/*"
-  ]
+    ],
+    "paths": {
+      "angular-dual-listbox": [
+        "dist/angular-dual-listbox"
+      ],
+      "angular-dual-listbox/*": [
+        "dist/angular-dual-listbox/*"
+      ]
+    }
+  }
 }
