--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,30 +1,20 @@
+/*
+  This is a "Solution Style" tsconfig.json file, and is used by editors and TypeScript’s language server to improve development experience.
+  It is not intended to be used to perform a compilation.
+
+  To learn more about this file see: https://angular.io/config/solution-tsconfig.
+*/
 {
-  "compileOnSave": false,
-  "compilerOptions": {
-    "baseUrl": "./",
-    "outDir": "./dist/out-tsc",
-    "sourceMap": true,
-    "declaration": false,
-    "module": "esnext",
-    "moduleResolution": "node",
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
-    "importHelpers": true,
-    "target": "es2015",
-    "typeRoots": [
-      "node_modules/@types"
-    ],
-    "lib": [
-      "es2018",
-      "dom"
-    ],
-    "paths": {
-      "angular-dual-listbox": [
-        "dist/angular-dual-listbox"
-      ],
-      "angular-dual-listbox/*": [
-        "dist/angular-dual-listbox/*"
-      ]
+  "files": [],
+  "references": [
+    {
+      "path": "./tsconfig.app.json"
+    },
+    {
+      "path": "./projects/angular-dual-listbox/tsconfig.lib.json"
+    },
+    {
+      "path": "./projects/angular-dual-listbox/tsconfig.spec.json"
     }
-  }
+  ]
 }
